--- a/AppMovieCoppel/AppMovieCoppel/Info.plist
+++ b/AppMovieCoppel/AppMovieCoppel/Info.plist
@@ -2,17 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleShortVersionString</key>
+    <string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>Configuration</key>
 	<string>${CONFIGURATION}</string>
+    <key>UIAppFonts</key>
+    <array>
+        <string>ufonts.com_gotham-bold.ttf</string>
+        <string>ufonts.com_gotham-book.ttf</string>
+        <string>ufonts.com_gotham-light.ttf</string>
+        <string>ufonts.com_gotham-medium.ttf</string>
+    </array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
-		<key>UIAppFonts</key>
-		<array>
-			<string>ufonts.com_gotham-bold.ttf</string>
-			<string>ufonts.com_gotham-book.ttf</string>
-			<string>ufonts.com_gotham-light.ttf</string>
-			<string>ufonts.com_gotham-medium.ttf</string>
-		</array>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
